z-indexes fixed

--- a/app/styles/scenes/_game_over.scss
+++ b/app/styles/scenes/_game_over.scss
@@ -7,7 +7,7 @@
     left: 0;
     min-width: 100%;
     margin: 0px auto;
-    z-index: 100;
+    z-index: 2;
 
     .congratz {
         font-family: Kraash;
